--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
   },
   "homepage": "https://github.com/alexandre561/backend-express#readme",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.18.4",
-    "mysql2": "^3.9.2",
-    "cors": "^2.8.5",
-    "body-parser": "^1.20.2"
+    "multer": "^2.0.1",
+    "mysql2": "^3.9.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
