--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "dotenv": "^16.5.0",
     "express": "^4.18.4",
     "multer": "^2.0.1",
-    "mysql2": "^3.9.2"
+    "mysql2": "^3.9.2",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
