--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.4",
     "multer": "^2.0.1",
     "mysql2": "^3.9.2",
+    "nodemailer": "^7.0.3",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
